--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "frontender-nl",
   "version": "0.0.1",
   "description": "Website frontender.nl",
-  "main": "index.html",
+  "main": "build/index.html",
   "scripts": {
-    "build": "npm run build:clean && npm run build:copy",
+    "build": "run-s build:*",
     "build:clean": "rm -rf build && mkdir build",
     "build:copy": "cp index.html build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/ludder/frontender-nl/issues"
   },
-  "homepage": "https://github.com/ludder/frontender-nl#readme"
+  "homepage": "https://github.com/ludder/frontender-nl#readme",
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
