--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "run-s build:*",
     "build:clean": "rm -rf build && mkdir build",
     "build:copy": "cp index.html build",
+    "open": "concurrently \"http-server -a localhost\" \"open http://localhost:8080\"",
+    "start": "npm run open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +26,8 @@
   },
   "homepage": "https://github.com/ludder/frontender-nl#readme",
   "devDependencies": {
+    "concurrently": "^5.0.0",
+    "http-server": "^0.11.1",
     "npm-run-all": "^4.1.5"
   }
 }
