--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "run-s build:*",
     "build:clean": "rm -rf build && mkdir build",
     "build:copy": "cp index.html build",
-    "open": "concurrently \"http-server -a localhost\" \"open http://localhost:8080\"",
-    "start": "npm run open",
+    "start": "reload --port 5555 --browser --dir src --watch-dir src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,8 +25,7 @@
   },
   "homepage": "https://github.com/ludder/frontender-nl#readme",
   "devDependencies": {
-    "concurrently": "^5.0.0",
-    "http-server": "^0.11.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "reload": "^3.0.2"
   }
 }
