--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "run-s build:*",
     "build:clean": "rm -rf build && mkdir build",
-    "build:copy": "cp index.html build",
+    "build:copy": "cp src/index.html build",
+    "build:fonts": "subfont -i build/index.html",
     "start": "reload --port 5555 --browser --dir src --watch-dir src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +27,7 @@
   "homepage": "https://github.com/ludder/frontender-nl#readme",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "reload": "^3.0.2"
+    "reload": "^3.0.2",
+    "subfont": "^3.7.1"
   }
 }
